# gamecenter

./: .gitignore  AGENTS.md  ANALYSIS_README.md  CODE_ANALYSIS.md  ENGINEERING_ANALYSIS_SUMMARY.md  README.md  __init__.py  analyze_code.py  code_analysis_report.json  game_progress.json  generate_analysis_visualization.py  pygame_launcher.py
Eco_grassland/: README.md  REPAIR_REPORT.md  camera.py  ecosystem.py  game_entities.py  main.py  modern_tools.py  start_game.sh  ui_manager.py
alien_invasion/: alien.py  alien_invasion.py  bullet.py  button.py  game_stats.py  scoreboard.py  settings.py  ship.py  sound_manager.py
chess/: README.md  __init__.py  main.py  requirements.txt  test_voice.py
deltaOperation/: AGENTS.MD  INTEGRATION_REPORT.md  RELEASE_v1.3.0.md  VISUAL_ENHANCEMENT_GUIDE.md  __init__.py  config.py  download_assets.py  enhance_game.py  generate_game_assets.py  integrate_visuals.py  main.py
gomoku/: OPTIMIZATION_ANALYSIS.md  PERFORMANCE_ANALYSIS.md  README.md  TASK_COMPLETION_SUMMARY.md  TASK_COMPLETION_SUMMARY_OLD.md.bak  UPDATE_SUMMARY_20250122.md  __init__.py  ai_engine.py  ai_engine_manager.py  ai_engine_phase2.py  batch_update_config.py  evaluation.py  font_manager.py  game_logic.py  main.py  settings.json  test_ai_integration.py  test_ai_performance.py  test_performance_comparison.py  test_phase2_performance.py  test_pure_search_performance.py  test_smoke.py  ui_manager.py
gomoku/cpp_engine/: BUILD.md  CMakeLists.txt  cpp_ai_wrapper.py  gomoku_engine.cpp  gomoku_engine.def  gomoku_engine.hpp
militaryChess/: README.md  __init__.py  ai_engine.py  config.json  evaluation.py  game_logic.py  main.py  test_smoke.py
stickman_game/: main.py  setup_images.py  setup_sounds.py
streetBattle/: .env.local  3D_CHARACTER_FIX_REPORT.md  ANIMATION_SOLUTION_GUIDE.md  COMPREHENSIVE_FIX_REPORT.md  FIXES_SUMMARY.md  PHASE2_QUICK_GUIDE.md  PHASE2_VERIFICATION_REPORT.md  QUICKREF_3D_FIX.md  README.md  TASK_PROGRESS_REPORT.md  __init__.py  ai.py  audio.py  bam_3d_animation_system.py  batch_generate_sprites.py  character_animator.py  character_selector.py  character_validation_report_20250930_093504.md  combat.py  debug_character_names.py  download_character_particles.py  enhanced_3d_animation_system.py  enhanced_audio_system.py  game_state.py  (+39 more)
(+481 files in other folders)
